--- a/.github/workflows/snowflake-devops-demo.yml
+++ b/.github/workflows/snowflake-devops-demo.yml
@@ -38,8 +38,9 @@ jobs:
           python --version
           echo "Step 1: Installing schemachange"
           pip install schemachange
-          echo "snowsql version"
-          snowsql --version
+          echo "Step2: Intalling python-snowflake connector"
+          pip install snowflake-connector-python
+          
           
           echo "Step 2: Running schemachange"
           schemachange -f $GITHUB_WORKSPACE/migrations --connections-file-path $GITHUB_WORKSPACE/migrations/connections.toml --connection-name cicdtest -c $SF_DATABASE.SCHEMACHANGE.CHANGE_HISTORY --create-change-history-table
