--- a/.github/workflows/snowflake-devops-demo.yml
+++ b/.github/workflows/snowflake-devops-demo.yml
@@ -32,6 +32,9 @@ jobs:
     
       - name: Test installation
         run:  ~/snowflake/snowsql -v
+      
+      - name: CHeck install path
+        run: ls -a ~/.profile
 
       - name: Run schemachange
         env:
