--- a/.github/workflows/snowflake-devops-demo.yml
+++ b/.github/workflows/snowflake-devops-demo.yml
@@ -36,6 +36,9 @@ jobs:
       - name: Set Password
         run: SNOWSQL_PWD=Training@123
 
+      - name: Set permssions for shell script
+        run: chmod u+x $GITHUB_WORKSPACE/migrations/clonedb.sh
+
       - name: Call snowsql via shell script to clone DB before deployment
         run: $GITHUB_WORKSPACE/migrations/clonedb.sh
 
