--- a/.github/workflows/snowflake-devops-demo.yml
+++ b/.github/workflows/snowflake-devops-demo.yml
@@ -20,6 +20,14 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v2
 
+      # Copying our private key under ~/.ssh/
+      - name: Install SSH Key
+        uses: shimataro/ssh-key-action@v2
+        with:
+          key: ${{ secrets.SF_PRIVATE_KEY }}
+          name: id_rsa-snowflake
+          known_hosts: 'just-a-placeholder-so-we-dont-get-errors'
+
       - name: Use Python 3.8.x
         uses: actions/setup-python@v2.2.1
         with:
