--- a/.github/workflows/snowflake-devops-demo.yml
+++ b/.github/workflows/snowflake-devops-demo.yml
@@ -42,6 +42,9 @@ jobs:
       - name: Call snowsql via shell script to clone DB before deployment
         run: $GITHUB_WORKSPACE/migrations/clonedb.sh
 
+      - name: Install 
+        run: ln -s libcrypto.so.1.1 /usr/lib/libcrypto.so
+
       - name: Run schemachange
         env:
           SF_ACCOUNT: ${{ secrets.SF_ACCOUNT }}
