--- a/.github/workflows/snowflake-devops-demo.yml
+++ b/.github/workflows/snowflake-devops-demo.yml
@@ -34,7 +34,7 @@ jobs:
         run:  ~/snowflake/snowsql -v
 
       - name: Setup Snowsql config
-        run: ls -a /
+        run: ls -a /home/
       
       - name: Set permssions for shell script
         run: chmod u+x $GITHUB_WORKSPACE/migrations/clonedb.sh
