--- a/.github/workflows/snowflake-devops-demo.yml
+++ b/.github/workflows/snowflake-devops-demo.yml
@@ -39,17 +39,13 @@ jobs:
       - name: Print config
         run: cat ~/.snowsql/config
 
-      - name: Install oscrypto
-        run: pip install oscrypto
-      
-      - name: Set permssions for shell script
-        run: chmod u+x $GITHUB_WORKSPACE/migrations/clonedb.sh
+      - name: install python-snowflake
+        run: pip install snowflake-connector-python
 
-      - name: Call snowsql via shell script to clone DB before deployment
-        run: $GITHUB_WORKSPACE/migrations/clonedb.sh
+      - name: Run Clone DB script via python
+        run: $GITHUB_WORKSPACE/migrations/python create_clone.py
 
-
-
+        
       - name: Run schemachange
         env:
           SF_ACCOUNT: ${{ secrets.SF_ACCOUNT }}
